# bismuth

./: .gitignore  .justfile  Cargo.toml  bacon.toml  overview.md  readme.md  security.md  todo.md
bismuth-config/: Cargo.toml
bismuth-core/: Cargo.toml  config.toml
bismuth-core/src/: arguments.rs  build.rs  config.rs  init.rs  lib.rs  main.rs
bismuth-core/tests/: token_parse.rs
bismuth-custom/: Cargo.toml
bismuth-custom/data/: blog_item.html  blog_wrapper.html  blogitem.html  blogwrapper.html  navbar_item.html  navbar_wrapper.html
bismuth-custom/src/: lib.rs  plugin.rs  template.rs
bismuth-custom/src/bstd/: bloglist.rs  mod.rs  navbar.rs
bismuth-custom/src/builtin/: bloglist.rs  footer.rs  mod.rs  navbar.rs
bismuth-custom/testdata/output/: bismuth_custom__test__plugin.snap  bismuth_custom__test__plugin_2.snap  bismuth_custom__test__plugin_3.snap  bismuth_custom__test__template.snap  bismuth_custom__test__template_2.snap  bismuth_custom__test_utils__get_customs_test.snap  bismuth_custom__test_utils__plugin.snap  bismuth_custom__test_utils__plugin_2.snap  bismuth_custom__test_utils__template.snap  bismuth_custom__test_utils__test.snap
bismuth-custom/testdata/output/utils/: bismuth_custom__test_utils__get_customs_test.snap  bismuth_custom__test_utils__get_customs_test.snap.new
bismuth-html/: Cargo.toml  test.html  test_expected.html
bismuth-html/data/css/: base.css
bismuth-html/data/html/: default.html
bismuth-html/src/: lib.rs  utils.rs  write.rs
bismuth-html/src/render/: code.rs  element.rs  mod.rs
bismuth-html/src/template/: builtin.rs  external.rs  mod.rs
bismuth-html/testdata/output/render/: bismuth_html__render__element__test__2.snap  bismuth_html__render__element__test__3.snap  bismuth_html__render__element__test__test.snap  bismuth_html__render__test__2.snap  bismuth_html__render__test__3.snap  bismuth_html__render__test__br.snap  bismuth_html__render__test__latex.snap  bismuth_html__render__test__latex_1.snap  bismuth_html__render__test__path.snap  bismuth_html__render__test__path.snap.new  bismuth_html__render__test__test.snap
bismuth-html/testdata/output/template/: bismuth_html__template__test__1.snap  bismuth_html__template__test__2.snap  bismuth_html__template__test__test.snap
bismuth-html/testdata/test/: test.md
bismuth-html/testdata/test/render/: test.md
bismuth-html/tests/: pths.rs  strs.rs
bismuth-html/tests/utils/: mod.rs
socrates-core/: Cargo.toml
socrates-core/src/: arguments.rs  config.rs  main.rs
socrates-md/: Cargo.toml
socrates-md/src/: lib.rs  load.rs
socrates-md/src/testdata/output/: socrates_md__load__test__load_files.snap  socrates_md__test__load.snap  socrates_md__test__load_1.snap  socrates_md__test__load_2.snap  socrates_md__test__load_3.snap
socrates-md/testdata/output/: socrates_md__load__test__load.snap  socrates_md__test__load_file.snap  socrates_md__test__load_file_1.snap  socrates_md__test__load_file_2.snap  socrates_md__test__load_file_3.snap
socrates-md/testdata/tests/: TEST4.MD  test.markdown  test1.MARKDOWN  test2.md  test3.md
socrates-parser/: Cargo.toml  readme.md
socrates-parser/src/: custom.rs  error.rs  fontmatter.rs  item.rs  lib.rs  tree.rs
socrates-parser/testdata/output/: socrates_parser__test__name.snap
socrates-parser/testdata/output/utils/: socrates_parser__custom__test__load.snap  socrates_parser__custom__test__load_1.snap  socrates_parser__custom__test__load_2.snap  (+3 more)
socrates-parser/tests/: parser.rs
(+103 files in other folders)
