[package]
name = "bismuth-custom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bismuth-parser = {version = "0.1.0", path = "../bismuth-parser"}
bismuth-std = {version = "0.1.0", path = "../bismuth-std", optional = true}

[dev-dependencies]
insta = "1.26.0"
regex = "1.7.1"

[features]
bstd = ["dep:bismuth-std"]
