[package]
name = "bismuth-html"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bismuth-parser = {version = "0.1.0", path = "../bismuth-parser"}
regex = "1.7.1"

thiserror = "1.0"
anyhow = "1.0"
syntect = "5.0"
katex = { version = "0.4", features = ["duktape"], default-features = false }

[dev-dependencies]
insta = "1.26.0"
