[package]
name = "socrates-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socrates-md = {version = "0.1.0", path = "../socrates-md"}
socrates-error = {version = "0.1.0", path = "../socrates-error"}
clap = { version="4.1.1", features = ["derive", "cargo"] }

[dev-dependencies]
insta = "1.26.0"
