[package]
name = "socrates-md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socrates-error = { version = "0.1.0", path = "../socrates-error" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.26.0", features = ["yaml"] }
