[package]
name = "socrates-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socrates-lexer = {version = "0.1.0", path = "../socrates-lexer"}
socrates-md = {version = "0.1.0", path = "../socrates-md"}
serde = {version = "1.0.152", features = ["derive"]}
serde_yaml = "0.9"
rand = "0.8.5"

[dev-dependencies]
insta = "1.26.0"
